--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,15 @@ dist.jar=${dist.dir}/Sitema_Mecanica.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.flatlaf-3.1.1.jar=E:\\Net Beans\\Bibliotecas\\flatlaf-3.1.1.jar
+file.reference.flatlaf-3.1.1.jar-1=D:\\componentes\\Bibliotecas\\flatlaf-3.1.1.jar
 file.reference.itextpdf-5.4.1.jar=E:\\Net Beans\\Bibliotecas\\itextpdf-5.4.1.jar
+file.reference.itextpdf-5.4.1.jar-1=D:\\componentes\\Bibliotecas\\itextpdf-5.4.1.jar
 file.reference.JCalendar.jar=E:\\Net Beans\\Bibliotecas\\JCalendar.jar
+file.reference.JCalendar.jar-1=D:\\componentes\\Dependencias\\JCalendar.jar
 file.reference.mysql-connector-j-8.1.0.jar=E:\\Net Beans\\Bibliotecas\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar-1=D:\\componentes\\Bibliotecas\\mysql-connector-j-8.1.0.jar
 file.reference.UGComp.jar=C:\\Users\\Horacio\\Downloads\\UGComp.jar
+file.reference.UGComp.jar-1=D:\\componentes\\Dependencias\\Uc\\UGComp.jar
 file.reference.UGLibrary.jar=E:\\Net Beans\\Bibliotecas\\UGLibrary.jar
 includes=**
 jar.compress=false
@@ -42,7 +47,12 @@ javac.classpath=\
     ${file.reference.JCalendar.jar}:\
     ${file.reference.UGLibrary.jar}:\
     ${file.reference.UGComp.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.UGComp.jar-1}:\
+    ${file.reference.flatlaf-3.1.1.jar-1}:\
+    ${file.reference.itextpdf-5.4.1.jar-1}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar-1}:\
+    ${file.reference.JCalendar.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
