alteracao das interfaces

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,21 @@ dist.dir=dist
 dist.jar=${dist.dir}/Sitema_Mecanica.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.9.4.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\commons-beanutils-1.9.4.jar
+file.reference.commons-collections-3.2.1-1.0.0.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\commons-collections-3.2.1-1.0.0.jar
+file.reference.commons-digester-1.7.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\commons-digester-1.7.jar
 file.reference.flatlaf-3.1.1.jar=E:\\Net Beans\\Bibliotecas\\flatlaf-3.1.1.jar
 file.reference.flatlaf-3.1.1.jar-1=D:\\componentes\\Bibliotecas\\flatlaf-3.1.1.jar
 file.reference.itextpdf-5.4.1.jar=E:\\Net Beans\\Bibliotecas\\itextpdf-5.4.1.jar
 file.reference.itextpdf-5.4.1.jar-1=D:\\componentes\\Bibliotecas\\itextpdf-5.4.1.jar
+file.reference.jasperreports-6.5.1.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\jasperreports-6.5.1.jar
+file.reference.jasperreports-fonts-6.20.0.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\jasperreports-fonts-6.20.0.jar
+file.reference.jasperreports-javaflow-6.20.0.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\jasperreports-javaflow-6.20.0.jar
 file.reference.JCalendar.jar=E:\\Net Beans\\Bibliotecas\\JCalendar.jar
 file.reference.JCalendar.jar-1=D:\\componentes\\Dependencias\\JCalendar.jar
 file.reference.mysql-connector-j-8.1.0.jar=E:\\Net Beans\\Bibliotecas\\mysql-connector-j-8.1.0.jar
 file.reference.mysql-connector-j-8.1.0.jar-1=D:\\componentes\\Bibliotecas\\mysql-connector-j-8.1.0.jar
+file.reference.org-apache-commons-logging.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\org-apache-commons-logging.jar
 file.reference.UGComp.jar=C:\\Users\\Horacio\\Downloads\\UGComp.jar
 file.reference.UGComp.jar-1=D:\\componentes\\Dependencias\\Uc\\UGComp.jar
 file.reference.UGLibrary.jar=E:\\Net Beans\\Bibliotecas\\UGLibrary.jar
@@ -52,7 +59,14 @@ javac.classpath=\
     ${file.reference.flatlaf-3.1.1.jar-1}:\
     ${file.reference.itextpdf-5.4.1.jar-1}:\
     ${file.reference.mysql-connector-j-8.1.0.jar-1}:\
-    ${file.reference.JCalendar.jar-1}
+    ${file.reference.JCalendar.jar-1}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.1-1.0.0.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.jasperreports-6.5.1.jar}:\
+    ${file.reference.jasperreports-fonts-6.20.0.jar}:\
+    ${file.reference.jasperreports-javaflow-6.20.0.jar}:\
+    ${file.reference.org-apache-commons-logging.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
