--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.jasperreports-javaflow-6.20.0.jar=E:\\backup\\Documents\\NetBeans
 file.reference.jasperreports-javaflow-6.20.0.jar-1=C:\\Users\\Horacio\\Downloads\\jars\\jasperreports-javaflow-6.20.0.jar
 file.reference.JCalendar.jar=E:\\Net Beans\\Bibliotecas\\JCalendar.jar
 file.reference.JCalendar.jar-1=D:\\componentes\\Dependencias\\JCalendar.jar
+file.reference.jcommon-1.0.17.jar=C:\\Users\\User\\Downloads\\jcommon-1.0.17.jar
 file.reference.mysql-connector-j-8.1.0.jar=E:\\Net Beans\\Bibliotecas\\mysql-connector-j-8.1.0.jar
 file.reference.mysql-connector-j-8.1.0.jar-1=D:\\componentes\\Bibliotecas\\mysql-connector-j-8.1.0.jar
 file.reference.org-apache-commons-logging.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\org-apache-commons-logging.jar
@@ -80,7 +81,8 @@ javac.classpath=\
     ${file.reference.jasperreports-6.5.1.jar-1}:\
     ${file.reference.jasperreports-fonts-6.20.0.jar-1}:\
     ${file.reference.jasperreports-javaflow-6.20.0.jar-1}:\
-    ${file.reference.org-apache-commons-logging.jar-1}
+    ${file.reference.org-apache-commons-logging.jar-1}:\
+    ${file.reference.jcommon-1.0.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
