Trabalho arduo comitado por Horacio

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Sitema_Mecanica
+application.vendor=Horacio
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Sitema_Mecanica.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.9.4.jar=E:\\backup\\Documents\\NetBeansProjects_BackUp\\TrabalhoPratico\\dist\\lib\\commons-beanutils-1.9.4.jar
 file.reference.commons-beanutils-1.9.4.jar-1=C:\\Users\\Horacio\\Downloads\\jars\\commons-beanutils-1.9.4.jar
@@ -82,7 +84,8 @@ javac.classpath=\
     ${file.reference.jasperreports-fonts-6.20.0.jar-1}:\
     ${file.reference.jasperreports-javaflow-6.20.0.jar-1}:\
     ${file.reference.org-apache-commons-logging.jar-1}:\
-    ${file.reference.jcommon-1.0.17.jar}
+    ${file.reference.jcommon-1.0.17.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -106,7 +109,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=visao.MenuPrincipal
+main.class=visao.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
